In the event a study description is more than 500 characters this will truncate the description and add a popover with the entire description contents to the page. This is to prevent super-long descriptions from disrupting the page layout and user experience.

--- a/app/assets/stylesheets/pages/studies.css.scss
+++ b/app/assets/stylesheets/pages/studies.css.scss
@@ -233,6 +233,10 @@
   display: inline-block;
 }
 
+.popover{
+  max-width: 75%;
+}
+
 .strong {
   font-weight: bold;
 }
